# mac-setup

./: .ansible-lint  .coverage  .editorconfig  .envrc  .gitignore  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .tmux.conf  .yamllint  10_10_EXECUTIVE_SUMMARY.txt  10_10_PERFECTION_EXECUTIVE_BRIEF.txt  10_10_QUICK_REFERENCE.md  ANSIBLE-MIGRATION.md  ARCHITECTURE.md  AUDIT_DELIVERABLES.txt  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_QUICK_REFERENCE.txt  AUDIT_REPORT_INDEX.md  AUDIT_SUMMARY_ONE_PAGE.md  BOOTSTRAP_COMPARISON.md  BOOTSTRAP_ENHANCEMENTS.md  BOOTSTRAP_SECURITY.md  BOOTSTRAP_TEST_RESULTS.md  Brewfile  Brewfile.sre  CHANGELOG.md  CICD_GUIDE.md  CI_CD_ALIGNMENT.md  CLEANUP_AND_CONSOLIDATION.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DEVKIT_FINAL_READY.md  DEVKIT_FINAL_SUMMARY.md  DEVKIT_REPOSITORY_UPDATE.md  DOCUMENTATION_ASSESSMENT.md  DOCUMENTATION_ASSESSMENT_INDEX.md  (+74 more)
.git-templates/hooks/: post-commit  pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  coverage.yml  markdown-link-check-config.json  metrics-dashboard.yml  publish-pypi.yml  quality.yml  release.yml  security-dependencies.yml  security.yml  test-all-platforms.yml  version-check.yml
.mutation_test/: report.json
ansible/roles/core/tasks/: main.yml
ansible/roles/dotfiles/: README.md
ansible/roles/dotfiles/defaults/: main.yml
ansible/roles/dotfiles/handlers/: main.yml
ansible/roles/dotfiles/meta/: main.yml
ansible/roles/dotfiles/tasks/: main.yml
ansible/roles/editors/tasks/: main.yml
ansible/roles/git/: README.md
ansible/roles/git/defaults/: main.yml
ansible/roles/git/files/: gitignore_global
ansible/roles/git/handlers/: main.yml
ansible/roles/git/meta/: main.yml
ansible/roles/git/tasks/: main.yml
ansible/roles/git/templates/: gitattributes.j2  gitconfig.j2  gitconfig.local.j2
ansible/roles/git/templates/hooks/: commit-msg.sh.j2  post-commit.sh.j2  pre-commit.sh.j2  prepare-commit-msg.sh.j2
ansible/roles/security/tasks/: main.yml
ansible/roles/shell/tasks/: main.yml
cli/: __init__.py  audit.py  commit_validator.py  config.sh  config_engine.py  exceptions.py  git_config_manager.py  health_check.py  log.py  mutation_test.py  performance.py  plugin_system.py  plugin_validator.py  py.typed  setup_wizard.py  utils.py
config/: config.yaml  schema.yaml
defaults/: main.yml
docs/: AI_CODE_CORRECTNESS_FRAMEWORK.md  AI_COMMITS_COMPLETE_GUIDE.md  AI_COMMIT_FORMALIZATION.md  API_REFERENCE.md  COMMIT_CHECKLIST.md  COMMIT_QUALITY_STANDARD.md  ENFORCEMENT_IN_ACTION.md  ENFORCEMENT_SYSTEM.md  GIT_ARCHITECTURE_DIAGRAM.md  GIT_CONFIGURATION_GUIDE.md  GIT_ROLE_INTEGRATION.md  GLOBAL_SETUP_GUIDE.md  MIGRATION_GUIDES.md  MODULAR_ARCHITECTURE.md  MULTI_REPO_ENFORCEMENT.md  PERFORMANCE.md  PLUGIN_DEVELOPMENT_GUIDE.md  RELEASE_PROCESS.md  TROUBLESHOOTING.md
docs/archive/: AUDIT_SUMMARY_ONE_PAGE.md  CLEANUP_CHECKLIST.md  CODE_CLEANUP_ANALYSIS.md  COMPREHENSIVE_AUDIT_REPORT.md  DOCUMENTATION_ASSESSMENT.md  DOCUMENTATION_ASSESSMENT_INDEX.md  ENFORCEMENT_TEST_NOTES.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT_FINAL.md  PHASE_3_COMPLETION_REPORT.md  README.md  REMEDIATION_INDEX.md  REMEDIATION_PLAN.md  TEST_ANALYSIS.md
dotfiles/: .direnvrc  .inputrc  .tmux.conf  .zshrc  README.md
dotfiles/ghostty/: README.md  config
dotfiles/nvim/: init.lua
dotfiles/nvim/lua/config/: keymaps.lua  options.lua
dotfiles/nvim/lua/plugins/: colorscheme.lua  essentials.lua  gitsigns.lua  lsp.lua  lualine.lua  nvim-cmp.lua  nvim-tree.lua  telescope.lua  treesitter.lua  which-key.lua
group_vars/: all.yml  development.yml  sre.yml
host_vars/: localhost.yml
plugins/: example_docker_plugin.py
scripts/: benchmark.sh  bump-version.sh  install.sh
tasks/: exportrc.yml  gdircolors.yml  sudoers.yml
tests/: conftest.py  test_audit.py  test_audit_refactored.py  test_commit_validator.py  test_config_engine.py  test_config_engine_coverage.py  test_config_security.py  test_enhanced_errors.py  test_git_config_manager.py  test_health_check.py  test_log.py  test_mutation_test.py  test_performance.py  test_plugin_security.py  test_plugin_system.py  test_setup_wizard.py  test_suite.py  ultra_test_suite.py
