[metadata]
name = devkit
version = 3.1.0
author = Devkit Contributors
author_email = maintainer@example.com
description = Devkit - Development Environment Automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vietcgi/devkit
project_urls =
    Bug Tracker = https://github.com/vietcgi/devkit/issues
    Documentation = https://github.com/vietcgi/devkit
    Source Code = https://github.com/vietcgi/devkit
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include =
    cli
    cli.*

[options.entry_points]
console_scripts =
    devkit = cli.main:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[coverage:run]
source = cli
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod
    pass
precision = 2
show_missing = True
skip_covered = False

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info
ignore =
    E203,
    W503,
    E501

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[isort]
profile = black
line_length = 100
skip_gitignore = True
